<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/BG"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_ph"
                android:textColor="@color/FC"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/Story_cover"
                app:layout_constraintStart_toStartOf="@+id/Story_title"
                app:layout_constraintTop_toBottomOf="@+id/Auteur"
                app:layout_constraintVertical_bias="0.31" />

            <TextView
                android:id="@+id/Auteur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auteur_ph"
                android:textColor="@color/FC"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/Story_title"
                app:layout_constraintTop_toBottomOf="@+id/Story_title"
                app:layout_constraintVertical_bias="0.17000002" />

            <TextView
                android:id="@+id/Story_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fable_ph"
                android:textColor="@color/FC"
                app:layout_constraintBottom_toBottomOf="@+id/Type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toEndOf="@+id/Type"
                app:layout_constraintTop_toTopOf="@+id/Type"
                app:layout_constraintVertical_bias="0.542" />

            <TextView
                android:id="@+id/Story_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@color/FC"
                app:layout_constraintBottom_toBottomOf="@+id/Auteur"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toEndOf="@+id/Auteur"
                app:layout_constraintTop_toTopOf="@+id/Auteur"
                app:layout_constraintVertical_bias="0.268" />

            <TextView
                android:id="@+id/Story_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aladin"

                android:text="@string/title_ph"
                android:textColor="@color/FC"
                android:textSize="24sp"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toEndOf="@+id/Story_cover"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.07999998" />

            <ImageView
                android:id="@+id/Story_cover"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/story1_cover"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Story_cover"
                app:layout_constraintTop_toBottomOf="@+id/Type"
                app:layout_constraintVertical_bias="0.75">

                <ImageButton
                    android:id="@+id/read"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:background="@null"
                    app:srcCompat="@drawable/read"
                    app:tint="@color/FC" />

                <ImageButton
                    android:id="@+id/listen"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:background="@null"
                    app:srcCompat="@drawable/listen"
                    app:tint="@color/FC" />

                <ImageButton
                    android:id="@+id/favbtn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:background="@null"
                    app:srcCompat="@drawable/favoris_n"
                    app:tint="#FFD700" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>